--- a/.github/workflows/ua-action-scan.yml
+++ b/.github/workflows/ua-action-scan.yml
@@ -40,6 +40,7 @@ jobs:
         WS_DOCKER_PULL_ENABLE: true
         WS_DOCKER_PULL_IMAGES: ghcr.io/xinyuanwss/nodegoat
       run: |
+        docker pull ghcr.io/xinyuanwss/nodegoat:master
         curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
         echo Unified Agent downloaded successfully
         java -jar wss-unified-agent.jar -loglevel debug
