--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -34,7 +34,8 @@ jobs:
         WS_PRODUCTNAME: GH_${{github.event.repository.name}}
         WS_PROJECTNAME: ${{github.ref}}_action
         WS_RESOLVEALLDEPENDENCIES: true
-        WS_GENERATEPROJECTDETAILSJSON: true
+        WS_GENERATESCANREPORT: true
+        WS_SCANREPORTFILENAMEFORMAT: static
         WS_DOCKER_SCANIMAGES: true
         WS_DOCKER_INCLUDES: ghcr.io/xinyuanwss/nodegoat-build
       run: |
@@ -42,4 +43,4 @@ jobs:
         curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
         echo Unified Agent downloaded successfully
         java -jar wss-unified-agent.jar -loglevel debug
-        cat /home/runner/work/NodeGoat/NodeGoat/./whitesource/scanProjectDetails.json
+        cat /home/runner/work/NodeGoat/NodeGoat/./whitesource/scan_report.json
